Adiciona botões e suporte a algoritmos de ordenação
- Corrige formatação no elemento `<input>` no arquivo HTML.
- Adiciona `<div>` com botões para "shuffle", "Bubble Sort",
  "Selection Sort" e "Quick Sort".
- Inclui elementos `<div>` e `<pre>` para exibição do vetor e logs.
- Conecta o script externo `ordenando.js` para lógica de ordenação.

--- a/ordenando.html
+++ b/ordenando.html
@@ -16,8 +16,18 @@
 
     <div>
         <label> vetor inicial numérico):</label>
-        <input id="inpútArray" value="5,3,8,1,9,2,7,4" style="width:250px"/>
+        <input id="inpútArray" value="5,3,8,1,9,2,7,4" style="width:250px" />
         <button id="setArray">carregar</button>
     </div>
+    <div style="margin-top:10px;">
+        <button id="shuffleBtn">Embaralhar (shuffle)</button>
+        <botton id="bubbleBtn">Bubble Sort</botton>
+        <button id="selectionBtn">Selection Sort</button>
+        <button id="quickBtn">Quick Sort</button>
+    </div>
+    <div id="arr">[ ]</div>
+    <pre id="log"></pre>
+    
+    <script src="ordenando.js"></script>
 </body>
 </html>
