Add 'Clear' button to ordenando.html
adicionado botão de limpar

--- a/ordenando.html
+++ b/ordenando.html
@@ -26,7 +26,8 @@
     </select>
  <!-- Campo de entrada e botões -->
     <button onclick="ordenar()">Ordenar</button>   
-    <button onclick="misturar()">Misturar</button>    
+    <button onclick="misturar()">Misturar</button>   
+    <button onclick="limpar()">Limpar</button>    
   <!-- Lista de valores -->
     <ul id="valores"></ul>    
     <script src="ordenando.js"></script>
